# litert_chat

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
include/: litert.h  litert_lm.h
scripts/: bench_models.py  setup.py
src/: litert.cpp  main.cpp
